# era-uma-vez

./: .env.example  .gitignore  TODO.md  architecture.md  gerar_imagens.py  gerar_manual.py  gerar_manual_v2.py  gerar_pdf.py  montar_cartas.py  package-lock.json  package.json  pipeline.py  pyproject.toml
.github/workflows/: supabase-migrations.yml
apps/card-tools/: cartas.json  package.json  pyproject.toml
apps/game-client/: next.config.ts  package.json  tsconfig.json
apps/game-client/app/: globals.css  layout.tsx  page.tsx
apps/game-client/app/mao/: page.tsx
apps/game-client/app/mesa/: page.tsx
apps/game-client/lib/: supabase.ts
apps/game-client/public/: manifest.json
doc/: handoff.md  implementation-plan.md  tasks.md  walkthrough.md
supabase/: README.md  seed_cards.mjs
supabase/migrations/: 001_initial_schema.sql  002_seed_cards.sql  003_add_deck_and_draw_pile.sql
